; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_mn88443x.c_mn88443x_read_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_mn88443x.c_mn88443x_read_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dtv_frontend_properties, %struct.mn88443x_priv* }
%struct.dtv_frontend_properties = type { i64 }
%struct.mn88443x_priv = type { i32 }

@SYS_ISDBS = common dso_local global i64 0, align 8
@SYS_ISDBT = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @mn88443x_read_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mn88443x_read_status(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.mn88443x_priv*, align 8
  %7 = alloca %struct.dtv_frontend_properties*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %9 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %8, i32 0, i32 1
  %10 = load %struct.mn88443x_priv*, %struct.mn88443x_priv** %9, align 8
  store %struct.mn88443x_priv* %10, %struct.mn88443x_priv** %6, align 8
  %11 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %12 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %11, i32 0, i32 0
  store %struct.dtv_frontend_properties* %12, %struct.dtv_frontend_properties** %7, align 8
  %13 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %7, align 8
  %14 = getelementptr inbounds %struct.dtv_frontend_properties, %struct.dtv_frontend_properties* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @SYS_ISDBS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load %struct.mn88443x_priv*, %struct.mn88443x_priv** %6, align 8
  %20 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %7, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @mn88443x_s_read_status(%struct.mn88443x_priv* %19, %struct.dtv_frontend_properties* %20, i32* %21)
  store i32 %22, i32* %3, align 4
  br label %37

23:                                               ; preds = %2
  %24 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %7, align 8
  %25 = getelementptr inbounds %struct.dtv_frontend_properties, %struct.dtv_frontend_properties* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @SYS_ISDBT, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = load %struct.mn88443x_priv*, %struct.mn88443x_priv** %6, align 8
  %31 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %7, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @mn88443x_t_read_status(%struct.mn88443x_priv* %30, %struct.dtv_frontend_properties* %31, i32* %32)
  store i32 %33, i32* %3, align 4
  br label %37

34:                                               ; preds = %23
  %35 = load i32, i32* @EINVAL, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %34, %29, %18
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @mn88443x_s_read_status(%struct.mn88443x_priv*, %struct.dtv_frontend_properties*, i32*) #1

declare dso_local i32 @mn88443x_t_read_status(%struct.mn88443x_priv*, %struct.dtv_frontend_properties*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
